# Rust-Actix-Sea

./: .env  Cargo.toml  README.md
migration/src/: lib.rs  m20240821_141200_user.rs  m20240821_141300_create_profile.rs  m20240821_141300_profile.rs  m20240821_141400_create_post.rs  m20240821_141400_post.rs  m20240821_141507_create_profile.rs
migrations/: 0001_migration.sql
src/: main.rs  model.rs  routes.rs
src/config/: db.rs
src/internal/: mod.rs  router.rs
src/internal/config/: db.rs
src/internal/entity/: mod.rs  post.rs  prelude.rs  profile.rs  user.rs
src/internal/handler/: mod.rs  post.rs  profile.rs  user.rs
src/internal/middleware/: log1.rs  log2.rs  mod.rs
src/internal/model/: category_model.rs  error.rs  mod.rs  post.rs  product_model.rs  profile.rs  user.rs
src/internal/routes/: category_routes.rs  mod.rs  post.rs  post_routes.rs  product_routes.rs  profile.rs  user.rs
src/routes/: category.rs  product.rs
