[package]
name = "Rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
sea-orm = { version = "1.0.0", features = ["sqlx-postgres", "runtime-actix-native-tls", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
log = "0.4.22"

migration = { path = "migration" }
serde_json = "1.0.125"